# install-me

./: CMakeLists.txt  README  README.md  app.cpp  app.hpp  app_cli_commands.cpp  app_cli_commands.hpp  app_flags.cpp  app_flags.hpp  fs.cpp  fs.hpp  main.cpp  program_options.cpp  program_options.hpp  string.cpp  string.hpp
src/: CMakeLists.txt  _package.hpp  app.cpp  app.hpp  app_cli_commands.cpp  app_cli_commands.hpp  app_flags.cpp  app_flags.hpp  cache.hpp  cache_manager.cpp  cache_manager.hpp  expected.hpp  file.cpp  file.hpp  fs.cpp  fs.hpp  fwd.hpp  generate_macros.hpp.in  main.cpp  output.cpp  output.hpp  package.cpp  package.hpp  package_exception.hpp  package_info.hpp  package_manager.cpp  package_manager.hpp  parse_exception.hpp  program_options.cpp  program_options.hpp  string.cpp  string.hpp  table.hpp  thread_pool.cpp  thread_pool.hpp
