cmake_minimum_required(VERSION 3.0.0)

set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 17)
find_package(fmt REQUIRED)

project(install-me VERSION 0.1.0)

set(VERSION ${PROJECT_VERSION})
configure_file(generate_macros.hpp.in generate_macros.hpp)

add_executable(${PROJECT_NAME}
   main.cpp
   program_options.cpp
   app.cpp)
target_link_libraries(${PROJECT_NAME} fmt::fmt)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})